device: Various fixes and upstream updates

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -207,4 +207,7 @@
 
     <!-- Show battery fully charged notification -->
     <bool name="config_showBatteryFullyChargedNotification">true</bool>
+
+    <!-- Set the system language as value of EF LI/EF PL -->
+    <bool name="config_use_sim_language_file">false</bool>
 </resources>
